--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install project dependencies
+          pip install -e .  # Install package in editable mode using pyproject.toml
 
       - name: Run Tests with pytest
         run: |
