--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .  # Install package in editable mode using pyproject.toml
+          pip install -e .[test]  # Install package with test dependencies
 
       - name: Run Tests with pytest
         run: |
-          pytest -s tests  # Run the tests with pytest
+          python -m pytest -s tests  # Run the tests with pytest using python -m
