--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install hatch
-          python -m pip install mypy types-all
+          python -m pip install hatch mypy
           
       - name: Run type checking
         run: |
