Changing cross-agent synchronization mechanism to socket-based with zeromq; Changed agent meta class to lazt intialization to resolve cross-process sync problems

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "tenacity>=8.2.2",
     "flask>=2.0.0",
     "jupyter_core",
+    "pyzmq>=25.1.0",
 ]
 
 [project.optional-dependencies]
